--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -38,7 +38,7 @@ jobs:
             			"type": "section",
             			"text": {
             				"type": "mrkdwn",
-            				"text": ":mega: DUBBD <https://github.com/defenseunicorns/uds-package-dubbd/releases/tag/v0.6.0|this is a link>"
+            				"text": ":mega: DUBBD <https://github.com/defenseunicorns/uds-package-dubbd/releases/tag/v0.6.0|${{ env.RELEASE_TAG }}>"
             			}
             		}
               ]
