--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -38,7 +38,7 @@ jobs:
             			"type": "section",
             			"text": {
             				"type": "mrkdwn",
-            				"text": ":mega: DUBBD <${{ env.RELEASE_BODY }}|${{ env.RELEASE_TAG }}>"
+            				"text": ":mega: DUBBD <${{ env.RELEASE_BODY }}|${{ env.RELEASE_TAG }}> has been released!"
             			}
             		}
               ]
