--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -35,10 +35,10 @@ jobs:
             {
               "blocks": [
                {
-            			"type": "header",
+            			"type": "section",
             			"text": {
             				"type": "mrkdwn",
-            				"text": ":mega: DUBBD <${{ env.RELEASE_BODY }}|${{ env.RELEASE_TAG }}> has been released!"
+            				"text": ":mega: *DUBBD <${{ env.RELEASE_BODY }}|${{ env.RELEASE_TAG }}> has been released!*"
             			}
             		}
               ]
