chore: update with main

--- a/on-prem/zarf.yaml
+++ b/on-prem/zarf.yaml
@@ -2,9 +2,9 @@
 kind: ZarfPackageConfig
 metadata:
   name: dubbd-on-prem
-  description: "Defense Unicorns Big Bang Distro for On-Prem VMware Environment"
+  description: "Defense Unicorns Big Bang Distro for On-Prem RKE2 Environment"
   # x-release-please-start-version
-  version: "0.5.2"
+  version: "0.6.0"
   # x-release-please-end
   url: https://p1.dso.mil/products/big-bang
   image: https://p1.dso.mil/img/Big_Bang_Color_Logo_White_text.de14c793.webp
@@ -25,7 +25,7 @@ variables:
     default: "false"
   - name: EXEMPT_NAMESPACES
     description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
-    default: '[ "zarf", "calico-apiserver", "calico-system", "tigera-operator" ]'
+    default: '[ "zarf" ]'
 
 components:
   - name: set-ephemeral
@@ -57,12 +57,6 @@ components:
         version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
         # valuesFiles:
         #   - values/on-prem-istio.yaml
-    actions:
-      onDeploy:
-        before:
-          - cmd: |
-              ./zarf tools kubectl label ns -l app.kubernetes.io/part-of=dubbd-aws zarf.dev/agent-
-            description: "Remove Zarf ignore namespace labels for DUBBD AWS"
   - name: dubbd-post-upgrade
     required: true
     import:
