--- a/defense-unicorns-distro/manifests/admin-interface-credentials.yaml
+++ b/defense-unicorns-distro/manifests/admin-interface-credentials.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: zarf
   labels:
     generated-by: dubbd
-data:
-  grafana-password: ###ZARF_VAR_GRAFANA_ADMIN_PASSWORD_BASE64###
+stringData:
+  grafana-password: ###ZARF_VAR_GRAFANA_ADMIN_PASSWORD###
