Slack message on new version (#466)
chore: Adding new release notification to the public-uds Slack channel

---------

Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -43,3 +43,9 @@ jobs:
     with:
       working_dir: defense-unicorns-distro
     secrets: inherit
+
+  notify-public-uds:
+    needs: tag-new-version
+    if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
+    uses: ./.github/workflows/slack-notify-on-new-release.yaml
+    secrets: inherit
