chore: refactor to rke2

--- a/.github/workflows/create-uds-oscal-component.yaml
+++ b/.github/workflows/create-uds-oscal-component.yaml
@@ -43,8 +43,8 @@ jobs:
       - name: Create UDS Core AWS OSCAL-Component File
         run: ./component-generator/bin/component-generator aggregate --input .github/workflows/oscal/config-uds-core-aws-oscal-component.yaml
 
-      - name: Create DUBBD On-Prem OSCAL-Component File
-        run: ./component-generator/bin/component-generator aggregate --input .github/workflows/oscal/config-dubbd-on-prem-oscal-component.yaml
+      - name: Create DUBBD RKE2 OSCAL-Component File
+        run: ./component-generator/bin/component-generator aggregate --input .github/workflows/oscal/config-dubbd-rke2-oscal-component.yaml
 
       - name: Clean Up
         run: rm -rf component-generator
@@ -52,7 +52,7 @@ jobs:
       - name: Yaml Formatter and Cleanup
         run: |
           npm install --save-dev --save-exact prettier
-          npx prettier oscal-component.yaml aws/dubbd-aws/oscal-component.yaml aws/uds-core-aws/oscal-component.yaml on-prem/oscal-component.yaml --write
+          npx prettier oscal-component.yaml aws/dubbd-aws/oscal-component.yaml aws/uds-core-aws/oscal-component.yaml rke2/oscal-component.yaml --write
           npm uninstall --save-dev prettier
           rm -rf node_modules/
           rm package.json
