feat: add randomly generated neuvector admin creds

--- a/defense-unicorns-distro/manifests/admin-interface-credentials.yaml
+++ b/defense-unicorns-distro/manifests/admin-interface-credentials.yaml
@@ -7,3 +7,4 @@ metadata:
     generated-by: dubbd
 stringData:
   grafana-password: ###ZARF_VAR_GRAFANA_ADMIN_PASSWORD###
+  neuvector-password: ###ZARF_VAR_NEUVECTOR_ADMIN_PASSWORD###
