--- a/values/neuvector.yaml
+++ b/values/neuvector.yaml
@@ -14,3 +14,14 @@ neuvector:
             scan_config:
               auto_scan: true
             no_telemetry_report: true
+          userinitcfg.yaml:
+            always_reload: true
+            users:
+            - username: metrics
+              password: ###ZARF_VAR_NEUVECTOR_METRICS_PASSWORD###
+              role: reader
+              fullname: metrics
+            - username: admin
+              password: ###ZARF_VAR_NEUVECTOR_ADMIN_PASSWORD###
+              role: admin
+              fullname: metrics
