testing slack notifications
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -46,6 +46,8 @@ jobs:
             		}
               ]
             }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       - uses: slackapi/slack-github-action@v1.24.0
         with:
           # Unlike the step posting a new message, this step does not accept a channel name.
