--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -32,7 +32,7 @@ jobs:
           # Slack channel id, channel name, or user id to post message.
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
-          channel-id: '@chris,#uds-pull-requests'
+          channel-id: 'C05CYSCMRNV'
           # For posting a simple plain text message
           payload: |
             {
@@ -52,7 +52,7 @@ jobs:
         with:
           # Unlike the step posting a new message, this step does not accept a channel name.
           # Please use a channel ID, not a name here.
-          channel-id: "@chris,#uds-pull-requests"
+          channel-id: "C05CYSCMRNV"
           update-ts: ${{ steps.slack.outputs.ts }}
           payload: |
             {
