--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -62,6 +62,7 @@ jobs:
           payload: |
             {
               "text": "Deployment finished (Completed)",
+              "unfurl_links": true
               "blocks": [
                {
             			"type": "section",
