--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -76,23 +76,23 @@ jobs:
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
-#     - name: Send Slack notification
-#       id: slack
-#       uses: slackapi/slack-github-action@v1.24.0
-#       with:
-#         channel-id: 'uds-new-release'
-#         payload: |
-#           {
-#             "blocks": [
-#              {
-#           			"type": "section",
-#           			"text": {
-#           				"type": "mrkdwn",
-#           				"text": ":mega: *DUBBD <${{ env.RELEASE_HTML_URL }}|${{ env.RELEASE_TAG }}> has been released!* :mega:"
-#           			}
-#           		}
-#             ]
-#           }
-#       env:
-#         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-#         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+     - name: Send Slack notification
+       id: slack
+       uses: slackapi/slack-github-action@v1.24.0
+       with:
+         channel-id: 'uds-new-release'
+         payload: |
+           {
+             "blocks": [
+              {
+           			"type": "section",
+           			"text": {
+           				"type": "mrkdwn",
+           				"text": "${{ env.RELEASE_HTML_URL }}"
+           			}
+           		}
+             ]
+           }
+       env:
+         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
