testing slack notifications
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -41,7 +41,7 @@ jobs:
           # For posting a simple plain text message
           payload: |
             {
-              "unfurl_links": true
+              "unfurl_links": true,
               "blocks": [
                {
             			"type": "section",
