testing slack notifications
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -63,7 +63,7 @@ jobs:
           payload: |
             {
               "text": "Deployment finished (Completed)",
-              "unfurl_links": true
+              "unfurl_links": true,
               "blocks": [
                {
             			"type": "section",
