--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -62,20 +62,11 @@ jobs:
           update-ts: ${{ steps.slack.outputs.ts }}
           payload: |
             {
-              "text": "Deployment finished (Completed)",
-              "unfurl_links": true,
-              "blocks": [
-               {
-            			"type": "section",
-            			"text": {
-            				"type": "mrkdwn",
-            				"text": ":mega: *DUBBD <${{ env.RELEASE_HTML_URL }}|${{ env.RELEASE_TAG }}> has been released!* :mega:"
-            			}
-            		}
-              ]
+                "text": "<https://api.slack.com>",
+                "unfurl_links": true
             }
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          env:
+            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
 #     - name: Send Slack notification
 #       id: slack
