--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -45,7 +45,6 @@ jobs:
     secrets: inherit
 
   notify-public-uds:
-    needs: tag-new-version
+    needs: [tag-new-version, publish-dubbd-core, publish-dubbd-k3d, publish-dubbd-aws]
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
     uses: ./.github/workflows/slack-notify-on-new-release.yaml
-    secrets: inherit
