feat: add base on-prem package for rke2 (#455)
* feat: init on-prem folder

* chore: cleanup, docs, workflow for OSCAL

* fix: versioning

* Apply automatic changes

* chore: rebase

* Apply automatic changes

* chore: prettier

* Apply automatic changes

* chore: update with main

* chore: refactor to rke2

---------

Co-authored-by: mjnagel <mjnagel@users.noreply.github.com>

--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -15,6 +15,7 @@ on:
       - "aws/cloudtrail/**"
       - "aws/**/test/**"
       - "k3d/**"
+      - "rke2/**"
       # - "oscal-component.y*ml"
       # -  aws/dubbd-aws/oscal-component.y*ml
       # -  aws/uds-core-aws/oscal-component.y*ml
