--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -125,19 +125,17 @@ components:
     actions:
       onDeploy:
         before:
-          #TODO: change all calls to kubectl to ./zarf tools kubectl 
-          - cmd: "if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then kubectl get secret -n zarf dubbd-admin-interface-credentials -ojsonpath='{.data.grafana-password}' | base64 -d; else openssl rand -base64 24; fi"
+          - cmd: "if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data \"grafana-password\" | base64decode}}' ; else openssl rand -base64 24; fi"
             mute: true
             setVariables:
               - name: GRAFANA_ADMIN_PASSWORD
                 sensitive: true
-          - cmd: "if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then kubectl get secret -n neuvector neuvector-prometheus-exporter-pod-secret -ojsonpath='{.data.CTRL_PASSWORD}' | base64 -d; else openssl rand -base64 24; fi"
-          #TODO: check for is upgrade and check that existing secret exists/is not empty. if empty, generate new value
+          - cmd: "if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then ./zarf tools kubectl get secret -n neuvector neuvector-prometheus-exporter-pod-secret -o go-template='{{index .data \"CTRL_PASSWORD\" | base64decode}}' >/dev/null 2>&1; if [ $? -ne 0 ]; then openssl rand -base64 24; fi; else openssl rand -base64 24; fi"
             mute: true
             setVariables:
               - name: NEUVECTOR_METRICS_PASSWORD
                 sensitive: true
-          - cmd: "if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then kubectl get secret -n zarf dubbd-admin-interface-credentials -ojsonpath='{.data.neuvector-password}' | base64 -d; else openssl rand -base64 24; fi"
+          - cmd: "if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data \"neuvector-password\" | base64decode}}'; else openssl rand -base64 24; fi"
             mute: true
             setVariables:
               - name: NEUVECTOR_ADMIN_PASSWORD
