--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -17,6 +17,7 @@ on:
       - ".github/workflows/*aws*.y*ml"
       - ".github/workflows/*cloudtrail*.y*ml"
       - ".github/workflows/*uds*.y*ml"
+      - ".github/workflows/*rke2*.y*ml"
       - "**/*oscal-component.y*aml"
 
 jobs:
