--- a/.github/workflows/ci-on-pull-request-rke2.yaml
+++ b/.github/workflows/ci-on-pull-request-rke2.yaml
@@ -1,4 +1,4 @@
-name: CI DUBBD AWS
+name: CI DUBBD RKE2
 
 on:
   pull_request:
@@ -11,22 +11,14 @@ on:
       - "**/*.json"
       - "**/*.png"
       - "**/*.svg"
-      - "aws/uds-core-aws/**"
-      - "aws/cloudtrail/**"
-      - "aws/**/test/**"
+      - "aws/**"
       - "k3d/**"
-      - "rke2/**"
-      # - "oscal-component.y*ml"
-      # -  aws/dubbd-aws/oscal-component.y*ml
-      # -  aws/uds-core-aws/oscal-component.y*ml
-      - "**/oscal-component.y*ml"
+      - "oscal-component.y*ml"
+      - ".github/workflows/*aws*.y*ml"
       - ".github/workflows/*k3d*.y*ml"
       - ".github/workflows/*cloudtrail*.y*ml"
       - ".github/workflows/*uds*.y*ml"
-      - ".github/workflows/*rke2*.y*ml"
-      - ".github/workflows/oscal/*oscal-component.y*ml"
-
-  workflow_call:
+      - "**/*oscal-component.y*aml"
 
 jobs:
   yaml-lint:
@@ -37,15 +29,8 @@ jobs:
         run: pip install yamllint
       - name: Lint YAML files
         run: yamllint . -c .yamllint --no-warnings
-
   test-release:
     needs: yaml-lint
     if: needs.yaml-lint.result == 'success' || needs.yaml-lint.result == 'skipped'
-    uses: ./.github/workflows/test-dubbd-aws-install.yaml
-    secrets: inherit
-
-  test-upgrade:
-    needs: yaml-lint
-    if: needs.yaml-lint.result == 'success' || needs.yaml-lint.result == 'skipped'
-    uses: ./.github/workflows/test-dubbd-aws-upgrade.yaml
+    uses: ./.github/workflows/test-dubbd-rke2-install.yaml
     secrets: inherit
