--- a/.github/workflows/test-dubbd-rke2-install.yaml
+++ b/.github/workflows/test-dubbd-rke2-install.yaml
@@ -43,22 +43,23 @@ jobs:
           terraform plan
           sleep 15 # time to review
           terraform apply -auto-approve
-        working-directory: rke2
+        working-directory: .github/workflows/rke2
 
       - name: Zarf init
         run: zarf init -a amd64 --components=git-server --confirm
 
       - name: Deploy DUBBD on RKE2 cluster
         run: zarf package deploy zarf-package-*.tar.zst --confirm
-        working-directory: k3d
+        working-directory: rke2
         timeout-minutes: 60
 
       - name: Remove DUBBD from RKE2 cluster
         if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: k3d
+        working-directory: rke2
         timeout-minutes: 60
 
       - name: Teardown RKE2 cluster
         if: always()
         run: terraform destroy -auto-approve
+        working-directory: .github/workflows/rke2
