--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 **/.terraform
 **/.terraform.lock.hcl
 **/*.tfstate.backup
+**/*.orig
 **/*.out
 *.tar.gz
 **/*.tar.zst
@@ -10,6 +11,7 @@
 defense-unicorns-distro/preflight.sh
 .terraform
 tmp
+tmp-*
 zarf-sbom
 .idea
 **/checksums.txt
