--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -292,7 +292,7 @@ components:
     actions:
       onDeploy:
         after:
-          - cmd: cd $(find . -name 'main.tf' -printf '%h\n' -quit) && terraform output -raw irsa_role_arn
+          - cmd: cd $(find . -name 'main.tf' -printf '%h\n' -quit) && terraform output -raw route53_role_arn
             dir: ../tmp-terraform-route53
             setVariables:
               - name: ROUTE53_ROLE_ARN
