correct neuvevtor values and bash command

--- a/values/neuvector.yaml
+++ b/values/neuvector.yaml
@@ -4,8 +4,11 @@ neuvector:
     gateway: "admin"
   values:
     monitor:
-      CTRL_USERNAME: metrics
-      CTRL_PASSWORD: ###ZARF_VAR_NEUVECTOR_METRICS_PASSWORD###
+      exporter:
+        CTRL_USERNAME: metrics
+        CTRL_PASSWORD: ###ZARF_VAR_NEUVECTOR_METRICS_PASSWORD###
+        podAnnotations:
+          checksum/metrics-pass: dubbd-override
     containerd:
       enabled: true
       path: "###ZARF_VAR_CONTAINER_RUNTIME_SOCKET###"
