--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -127,7 +127,7 @@ components:
         before:
           - cmd: |
               if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then
-                ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data \"grafana-password\" | base64decode}}'
+                ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data "grafana-password" | base64decode}}'
               else
                 openssl rand -base64 24
               fi
@@ -137,7 +137,7 @@ components:
                 sensitive: true
           - cmd: |
               if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then
-                if ! ./zarf tools kubectl get secret -n neuvector neuvector-prometheus-exporter-pod-secret -o go-template='{{index .data \"CTRL_PASSWORD\" | base64decode}}' 2>/dev/null; then
+                if ! ./zarf tools kubectl get secret -n neuvector neuvector-prometheus-exporter-pod-secret -o go-template='{{index .data "CTRL_PASSWORD" | base64decode}}' 2>/dev/null; then
                   openssl rand -base64 24
                 fi;
               else
@@ -149,7 +149,7 @@ components:
                 sensitive: true
           - cmd: |
               if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then
-                ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data \"neuvector-password\" | base64decode}}'
+                ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data "neuvector-password" | base64decode}}'
               else
                 openssl rand -base64 24
               fi
