--- a/rke2/zarf.yaml
+++ b/rke2/zarf.yaml
@@ -41,7 +41,7 @@ components:
   - name: generate-credentials
     required: true
     import:
-      path: ../../defense-unicorns-distro
+      path: ../defense-unicorns-distro
   - name: download-flux
     required: true
     import:
