fix: double current defaults for cpu and memory

--- a/values/kyverno.yaml
+++ b/values/kyverno.yaml
@@ -8,6 +8,13 @@ kyverno:
     updateStrategy:
       rollingUpdate:
         maxUnavailable: 0
+    resources:
+      requests:
+        cpu: 1
+        memory: "1Gi"
+      limits:
+        cpu: 1
+        memory: "1Gi"    
 
 kyvernoPolicies:
   values:
