--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -131,7 +131,7 @@ components:
               else
                 openssl rand -base64 24
               fi
-            mute: true
+            mute: false
             setVariables:
               - name: GRAFANA_ADMIN_PASSWORD
                 sensitive: true
@@ -143,7 +143,7 @@ components:
               else
                 openssl rand -base64 24
               fi
-            mute: true
+            mute: false
             setVariables:
               - name: NEUVECTOR_METRICS_PASSWORD
                 sensitive: true
@@ -153,7 +153,7 @@ components:
               else
                 openssl rand -base64 24
               fi
-            mute: true
+            mute: false
             setVariables:
               - name: NEUVECTOR_ADMIN_PASSWORD
                 sensitive: true
