--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -127,11 +127,13 @@ components:
         before:
           - cmd: |
               if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then
-                ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data "grafana-password" | base64decode}}'
+                if ! ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data "grafana-password" | base64decode}}' 2>/dev/null; then
+                  openssl rand -base64 24 
+                fi
               else
                 openssl rand -base64 24
               fi
-            mute: false
+            mute: true
             setVariables:
               - name: GRAFANA_ADMIN_PASSWORD
                 sensitive: true
@@ -143,17 +145,19 @@ components:
               else
                 openssl rand -base64 24
               fi
-            mute: false
+            mute: true
             setVariables:
               - name: NEUVECTOR_METRICS_PASSWORD
                 sensitive: true
           - cmd: |
               if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then
-                ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data "neuvector-password" | base64decode}}'
+                if ! ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data "neuvector-password" | base64decode}}' 2>/dev/null; then
+                  openssl rand -base64 24 
+                fi
               else
                 openssl rand -base64 24
               fi
-            mute: false
+            mute: true
             setVariables:
               - name: NEUVECTOR_ADMIN_PASSWORD
                 sensitive: true
