feat: non default creds for admin interfaces (#472)

--- a/rke2/zarf.yaml
+++ b/rke2/zarf.yaml
@@ -38,6 +38,10 @@ components:
     required: true
     import:
       path: ../defense-unicorns-distro
+  - name: generate-credentials
+    required: true
+    import:
+      path: ../defense-unicorns-distro
   - name: download-flux
     required: true
     import:
