--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -120,6 +120,52 @@ components:
                 autoIndent: true
           - cmd: rm bigbang.dev.cert
           - cmd: rm bigbang.dev.key
+  - name: generate-credentials
+    required: true
+    actions:
+      onDeploy:
+        before:
+          - cmd: |
+              if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then
+                if ! ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data "grafana-password" | base64decode}}' 2>/dev/null; then
+                  openssl rand -base64 24
+                fi
+              else
+                openssl rand -base64 24
+              fi
+            mute: true
+            setVariables:
+              - name: GRAFANA_ADMIN_PASSWORD
+                sensitive: true
+          - cmd: |
+              if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then
+                if ! ./zarf tools kubectl get secret -n neuvector neuvector-prometheus-exporter-pod-secret -o go-template='{{index .data "CTRL_PASSWORD" | base64decode}}' 2>/dev/null; then
+                  openssl rand -base64 24
+                fi
+              else
+                openssl rand -base64 24
+              fi
+            mute: true
+            setVariables:
+              - name: NEUVECTOR_METRICS_PASSWORD
+                sensitive: true
+          - cmd: |
+              if [ ${ZARF_VAR_IS_UPGRADE} = true ]; then
+                if ! ./zarf tools kubectl get secret -n zarf dubbd-admin-interface-credentials -o go-template='{{index .data "neuvector-password" | base64decode}}' 2>/dev/null; then
+                  openssl rand -base64 24
+                fi
+              else
+                openssl rand -base64 24
+              fi
+            mute: true
+            setVariables:
+              - name: NEUVECTOR_ADMIN_PASSWORD
+                sensitive: true
+    manifests:
+      - name: admin-interface-creds
+        namespace: zarf
+        files:
+          - ./manifests/admin-interface-credentials.yaml
   - name: download-flux
     required: true
     actions:
