--- a/values/kyverno.yaml
+++ b/values/kyverno.yaml
@@ -10,23 +10,9 @@ kyverno:
         maxUnavailable: 0
     resources:
       requests:
-        cpu: 1
+        cpu: "1000m"
         memory: "1Gi"
       limits:
-        cpu: 1
+        cpu: "1000m"
         memory: "1Gi"    
 
-kyvernoPolicies:
-  values:
-    exclude:
-      any:
-        - resources:
-            namespaces: ###ZARF_VAR_EXEMPT_NAMESPACES###
-    policies:
-      restrict-image-registries:
-        parameters:
-          allow:
-            - registry1.dso.mil
-            - registry.dso.mil
-            - 127.0.0.1 # zarf registry
-            - "###ZARF_VAR_APPROVED_REGISTRIES###"
